--- a/tox.ini
+++ b/tox.ini
@@ -10,7 +10,7 @@ python =
     3.12: py312
 
 [testenv]
-passenv = PYTHON_VERSION
+passenv = PYTHON_VERSION, CI, GITHUB_ACTIONS, ENERGYPLUS_VERSION
 allowlist_externals = poetry, pytest
 setenv =
     ARCHETYPAL_DATA = {envtmpdir}/cache
@@ -19,5 +19,5 @@ setenv =
     ARCHETYPAL_CACHE = {envtmpdir}/cache
     MPLBACKEND = agg
 commands =
-    poetry install -v
+    poetry install
     pytest {posargs}
